2004-04-27  Mark Grondona <mgrondona@llnl.gov>

	* src/qsnet/qshell.c (get_qshell_info) : Increase max environment
	string from 1k to 4k.

2004-04-26  Mark Grondona <mgrondona@llnl.gov>

	* src/qsnet/qswutil.c : Add missing variable in #ifdef HAVE_LIBELAN3

	* src/qsnet/qshell.c : Add missing newlines to error messages.

	* src/pdsh/opt.h, src/pdsh/opt.c : Added and initialized ret_remote_rc.

	* src/pdsh/dsh.c (dsh) : Initialize opt->getstat if either of
	ret_remote_rc or kill_on_fail are true, but only adjust exit value
	of pdsh process when ret_remote_rc is true.

	* src/pdsh/dsh.c (_rsh_thread) : Kill all processes if remote
	process is killed by a signal and opt->kill_on_fail is true.

	* src/pdsh/dsh.c (_die_if_signalled) : Added.

2004-04-08  Mark Grondona <mgrondona@llnl.gov>

	* src/qsnet/qswutil.c (_qsw_cap_create, _qsw_elan_nrails) : Added.

	* src/qsnet/qswutil.c (qsw_setup_program) : Further refinement
	of Elan multirail support.

2004-04-07  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/dsh.c (_fwd_signal) : Check for valid file descriptor
	before passing to mod_rcmd_signal().

	* src/pdsh/dsh.c (_rsh_thread) : Block SIGPIPE outside while loop
	and before call to connect.

	* src/pdsh/opt.c (opt_args) : Pass PCP only arguments to modules
	when in DSH mode.

	* src/qsnet/qswutil.c, src/modules/mqcmd.c, src/modules/qcmd.c: 
	Add support for user supplied railmask (default to 1). Fix 
	broken multrail (for elanctrl interface) reported by Fabrizio
	Petrini <fabrizio@lanl.gov>

	* src/qsnet/qshell.c (get_qshell_info) : Re-map QSHELL_REMOTE_* 
	environment variables to their unprefixed counterparts to allow  
	propagation of LD_LIBRARY_PATH and LD_PREOPEN to qshell jobs as
	suggested by Ashley Pittman <ashley@quadrics.com>.
	
	
2004-04-02  Mark Grondona <mgrondona@llnl.gov>

	* src/qsnet/Makfile.am : Need to link libqsw with libdl when not using 
	PAM. (Reported by Nicholas Henke <nic@clusterfs.com>)
