@@ -1,3 +1,10 @@
+2004-05-06  Mark Grondona <mgrondona@llnl.gov>
+
+	* src/qsnet/elanhosts.c, src/qsnet/elanhosts.h, src/qsnet/Makefile.am :
+	Removed elanhosts.[ch] (functionality moved into libelanhosts library).
+
+	* config/ac_elan.m4 : Check for presence of libelanhosts.
+
 2004-04-27  Mark Grondona <mgrondona@llnl.gov>
 
 	* src/qsnet/qshell.c (get_qshell_info) : Increase max environment
